fix wrong background image on link cards

--- a/src/styles/shared/_linkCard.scss
+++ b/src/styles/shared/_linkCard.scss
@@ -22,13 +22,13 @@
     box-shadow: inset 0 0 0 2000px rgba(232, 128, 105, 0.8);
   }
 
-  &:nth-of-type(1) {
+  &.web {
     background: url('../../../public/assets/home/mobile/image-web-design.jpg');
   }
-  &:nth-of-type(2) {
+  &.app {
     background: url('../../../public/assets/home/mobile/image-app-design.jpg');
   }
-  &:nth-of-type(3) {
+  &.graphic {
     background: url('../../../public/assets/home/mobile/image-graphic-design.jpg');
   }
 
@@ -63,13 +63,13 @@
       margin-bottom: 0;
     }
 
-    &:nth-of-type(1) {
+    &.web {
       background: url('../../../public/assets/home/tablet/image-web-design.jpg');
     }
-    &:nth-of-type(2) {
+    &.app {
       background: url('../../../public/assets/home/tablet/image-app-design.jpg');
     }
-    &:nth-of-type(3) {
+    &.graphic {
       background: url('../../../public/assets/home/tablet/image-graphic-design.jpg');
     }
 
@@ -94,15 +94,18 @@
     height: 100%;
     margin: 0;
 
-    &:nth-of-type(1) {
+    &.web {
       background: url('../../../public/assets/home/desktop/image-web-design-large.jpg');
-      grid-row: 1 / 3;
     }
-    &:nth-of-type(2) {
+    &.app {
       background: url('../../../public/assets/home/desktop/image-app-design.jpg');
     }
-    &:nth-of-type(3) {
+    &.graphic {
       background: url('../../../public/assets/home/desktop/image-graphic-design.jpg');
+    }
+
+    &:nth-of-type(1) {
+      grid-row: 1 / 3;
     }
   }
 }
